--- a/myweb.html
+++ b/myweb.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>    
+<title>Page Title 2</title>    
 </head>
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>This is a paragraph</p>
+<p>This is another paragraph</p>
 
 
 
